fix(integrations): Make overflow visible for issue modal

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -2802,3 +2802,9 @@ ul.crumbs {
     display: none;
   }
 }
+
+.issue-modal {
+  .modal-content {
+    overflow: visible;
+  }
+}
